bug fix: mrp dropdown words not showing

--- a/MerlionPortal/MerlionPortal-war/web/css/mrp.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/mrp.css
@@ -1,10 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Sep 27, 2014, 6:00:19 PM
-    Author     : yao
-*/
-
+.ui-cell-editor-input{
+    color:#555;
+}
